--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
   "repository": "https://github.com/Predator7/typescript-rest-api.git",
   "author": "Mihai Sarmaru <mihai.sarmaru@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "build": "tsc",
+    "start": "node ./dist/app.js",
+    "dev": "ts-node ./src/app.ts"
+  },
   "dependencies": {
     "@types/node": "^14.14.7",
     "typescript": "^4.0.5"
