--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "dev": "ts-node ./src/app.ts"
   },
   "dependencies": {
+    "@types/express": "^4.17.9",
     "@types/node": "^14.14.7",
+    "express": "^4.17.1",
     "typescript": "^4.0.5"
   },
   "devDependencies": {
