--- a/package.json
+++ b/package.json
@@ -13,8 +13,15 @@
   "dependencies": {
     "@types/express": "^4.17.9",
     "@types/node": "^14.14.7",
+    "@types/validator": "^13.1.0",
+    "@types/yamljs": "^0.2.31",
+    "connect": "^3.7.0",
     "express": "^4.17.1",
-    "typescript": "^4.0.5"
+    "express-openapi-validator": "^4.5.0",
+    "swagger-routes-express": "^3.2.1",
+    "typescript": "^4.0.5",
+    "validator": "^13.1.17",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "ts-node": "^9.0.0"
