--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "start": "node ./dist/app.js",
-    "dev": "ts-node ./src/app.ts"
+    "start": "node -r tsconfig-paths/register ./dist/app.js",
+    "dev": "ts-node -r tsconfig-paths/register ./src/app.ts"
   },
   "dependencies": {
     "@types/express": "^4.17.9",
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "express-openapi-validator": "^4.5.0",
     "swagger-routes-express": "^3.2.1",
+    "tsconfig-paths": "^3.9.0",
     "typescript": "^4.0.5",
     "validator": "^13.1.17",
     "yamljs": "^0.3.0"
