--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   },
   "dependencies": {
     "@types/express": "^4.17.9",
+    "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.7",
     "@types/validator": "^13.1.0",
     "@types/yamljs": "^0.2.31",
     "connect": "^3.7.0",
     "express": "^4.17.1",
     "express-openapi-validator": "^4.5.0",
+    "morgan": "^1.10.0",
+    "morgan-body": "^2.5.2",
     "swagger-routes-express": "^3.2.1",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.0.5",
