--- a/package.json
+++ b/package.json
@@ -7,16 +7,19 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "start": "node -r tsconfig-paths/register ./dist/app.js",
-    "dev": "ts-node -r tsconfig-paths/register ./src/app.ts"
+    "start": "SET ENV_FILE=./config/.env.prod && node -r tsconfig-paths/register ./dist/app.js",
+    "dev": "SET ENV_FILE=./config/.env.dev && ts-node -r tsconfig-paths/register ./src/app.ts"
   },
   "dependencies": {
+    "@types/dotenv-parse-variables": "^0.2.0",
     "@types/express": "^4.17.9",
     "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.7",
     "@types/validator": "^13.1.0",
     "@types/yamljs": "^0.2.31",
     "connect": "^3.7.0",
+    "dotenv-extended": "^2.9.0",
+    "dotenv-parse-variables": "^1.0.1",
     "express": "^4.17.1",
     "express-openapi-validator": "^4.5.0",
     "morgan": "^1.10.0",
